--- a/packages/polywrap-web3-config-bundle/pyproject.toml
+++ b/packages/polywrap-web3-config-bundle/pyproject.toml
@@ -15,13 +15,13 @@ include = ["**/wrap.info", "**/wrap.wasm"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-polywrap-core = "^0.1.0a1"
-polywrap-client-config-builder = "^0.1.0a1"
-polywrap-uri-resolvers = "^0.1.0a1"
-polywrap-manifest = "^0.1.0a1"
-polywrap-wasm = "^0.1.0a1"
-polywrap-sys-config-bundle = "^0.1.0a1"
-polywrap-ethereum-provider = "^0.1.0a1"
+polywrap-core = "0.1.0a35"
+polywrap-client-config-builder = "0.1.0a35"
+polywrap-uri-resolvers = "0.1.0a35"
+polywrap-manifest = "0.1.0a35"
+polywrap-wasm = "0.1.0a35"
+polywrap-sys-config-bundle = "0.1.0a1"
+polywrap-ethereum-provider = "0.1.0a5"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
