--- a/packages/polywrap-web3-config-bundle/pyproject.toml
+++ b/packages/polywrap-web3-config-bundle/pyproject.toml
@@ -20,8 +20,8 @@ polywrap-client-config-builder = "0.1.0a35"
 polywrap-uri-resolvers = "0.1.0a35"
 polywrap-manifest = "0.1.0a35"
 polywrap-wasm = "0.1.0a35"
-polywrap-sys-config-bundle = "0.1.0a1"
 polywrap-ethereum-provider = "0.1.0a5"
+polywrap-sys-config-bundle = {path = "../polywrap-sys-config-bundle", develop = true}
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
