--- a/packages/polywrap-web3-config-bundle/pyproject.toml
+++ b/packages/polywrap-web3-config-bundle/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "polywrap-web3-config-bundle"
-version = "0.1.0a1"
+version = "0.1.0a2"
 description = "Polywrap System Client Config Bundle"
 authors = ["Niraj <niraj@polywrap.io>"]
 readme = "README.md"
@@ -15,13 +15,13 @@ include = ["**/wrap.info", "**/wrap.wasm"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-polywrap-core = "0.1.0a35"
-polywrap-client-config-builder = "0.1.0a35"
-polywrap-uri-resolvers = "0.1.0a35"
-polywrap-manifest = "0.1.0a35"
-polywrap-wasm = "0.1.0a35"
-polywrap-ethereum-provider = "0.1.0a5"
-polywrap-sys-config-bundle = {path = "../polywrap-sys-config-bundle", develop = true}
+polywrap-core = "^0.1.0a2"
+polywrap-client-config-builder = "^0.1.0a2"
+polywrap-uri-resolvers = "^0.1.0a2"
+polywrap-manifest = "^0.1.0a2"
+polywrap-wasm = "^0.1.0a2"
+polywrap-ethereum-provider = "^0.1.0a2"
+polywrap-sys-config-bundle = "^0.1.0a2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
